--- a/index.html
+++ b/index.html
@@ -1,103 +1,161 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset ="UTF-8 />
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>nav bar</title>
 <style>
 * {
-margin:0;
-padding:0;
-box-resizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* fixed typo from box-resizing */
 }
-body{
-font-family:Arial,sans-serif;
-background-image: url('riz.jpg'); 
+body {
+  font-family: Arial, sans-serif;
+  background-image: url('riz.jpg'); 
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-nav{
-background-color:purple;
-display:flex;
-justify-content: space-between;
-align-items:center;
-padding:10px 20px;
+
+/* Navigation bar */
+nav {
+  background-color: purple;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  transition: background 0.4s ease;
 }
-.logo{
-color:yellow;
-font-size:23px;
-font-weight:bold;
+
+nav:hover {
+  background: linear-gradient(45deg, purple, violet);
 }
-.menu{
-list-style:none;
-display:flex;
+
+.logo {
+  color: grey;
+  font-size: 23px;
+  font-weight: bold;
 }
-.menu li{
-margin-left:23px;
+
+.menu {
+  list-style: none;
+  display: flex;
 }
-.menu li a{
-color:white;
-text-decoration:none;
-font-size:16px;
+
+.menu li {
+  margin-left: 23px;
+  position: relative;
 }
-.menu li a:hover{
-color:pink;
+
+.menu li a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  position: relative;
+  transition: color 0.3s ease;
 }
-.menu-toggle{
-display:none;
-flex-direction:column;
-cursor:pointer;
+
+/* Unique hover underline effect */
+.menu li a::after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  height: 2px;
+  width: 0%;
+  background-color: pink;
+  transition: width 0.3s ease;
 }
-menu toggle div{
-width:23px;
-height:3px;
-background-color:white;
-margin:4px 0;
+
+.menu li a:hover::after {
+  width: 100%;
 }
-#menu-checkbox{
-display:none;
+
+.menu li a:hover {
+  color: pink;
 }
+
+/* Hamburger toggle button */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.menu-toggle:hover {
+  transform: scale(1.1);
+}
+
+.menu-toggle div {
+  width: 23px;
+  height: 3px;
+  background-color: white;
+  margin: 4px 0;
+  transition: background 0.3s ease;
+}
+
+/* Hide checkbox */
+#menu-checkbox {
+  display: none;
+}
+
+/* Responsive styling */
 @media (max-width: 768px) {
-      .menu {
-        display: none;
+  .menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: #333;
+    width: 100%;
+    padding: 10px 0;
+    animation: slideDown 0.4s ease forwards;
+  }
 
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background-color: #333;
-        width: 100%;
-        padding: 10px 0;
-      }
+  .menu li {
+    text-align: center;
+    margin: 10px 0;
+  }
 
-      .menu li {
-        text-align: center;
-        margin: 10px 0;
-      }
+  #menu-checkbox:checked + .menu-toggle + .menu {
+    display: flex;
+  }
 
-      #menu-checkbox:checked + .menu-toggle + .menu {
-        display: flex;
-      }
-
-      .menu-toggle {
-        display: flex;
+  .menu-toggle {
+    display: flex;
+  }
 }
+
+/* Optional: Slide-down animation for mobile menu */
+@keyframes slideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 </style>
 </head>
 <body>
 <nav>
-<div class="logo">mysite</div>
-<input type="checkbox" id="menu-checkbox" />
-<label for="menu-checkbox" class="menu-toggle">
-<div></div>
-<div></div>
-<div></div>
-</label>
-<ul class="menu">
-<li><a href="home.html">home</a></li>
-<li><a href="about us.html">about us</a></li>
-<li><a href="contact.html">contact</a></li>
-<li><a href="location.html">location</a></li>
-</ul>
-</nav>
+  <div class="logo">heyy!!!</div>
+  <input type="checkbox" id="menu-checkbox" />
+  <label for="menu-checkbox" class="menu-toggle">
+    <div></div>
+    <div></div>
+    <div></div>
+  </label>
+  <ul class="menu">
+    <li><a href="Home.html">Home</a></li>
+    <li><a href="About us.html">About us</a></li>
+    <li><a href="Contact.html">Contact</a></li>
+    <li><a href="Location.html">Location</a></li>
+  </ul>
+</nav> 
 </body>
 </html>
