--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-image: url('riz.jpg'); 
+  background-image: url('bg.jpg'); 
   background-size: cover;
   background-repeat: no-repeat;
 }
