--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Creative Navbar</title>
   <style>
     :root {
-      --main-bg: #ffffff;
-      --text-color: #111;
-      --nav-bg: #f5f5f5;
+      --bg-light: #ffffff;
+      --bg-dark: #121212;
+      --text-light: #111;
+      --text-dark: #f0f0f0;
+      --nav-bg-light: #f5f5f5;
       --primary-color: #ff7e5f;
-      --highlight-color: #feb47b;
-      --hover-bg: rgba(255, 126, 95, 0.1);
-      --underline-color: #007acc;
+      --underline: #007acc;
     }
 
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--main-bg);
-      color: var(--text-color);
+      background-color: var(--bg-light);
+      color: var(--text-light);
       background-image: url('bg.jpg');
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     nav {
-      background-color: var(--nav-bg);
-      padding: 12px 20px;
+      background-color: var(--nav-bg-light);
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 12px 20px;
       position: sticky;
       top: 0;
       z-index: 100;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
     }
 
     .logo {
-      font-size: 1.6rem;
-      font-weight: 700;
+      font-size: 1.5rem;
+      font-weight: bold;
       color: var(--primary-color);
     }
 
@@ -54,36 +54,37 @@
       padding: 0;
     }
 
-    .menu li a {
-      text-decoration: none;
-      color: var(--text-color);
-      padding: 8px 12px;
-      font-size: 1.1rem;
+    .menu li {
       position: relative;
-      transition: color 0.3s, transform 0.3s;
     }
 
-    .menu li a:hover {
-      color: var(--primary-color);
-      background-color: var(--hover-bg);
-      transform: scale(1.05);
+    .menu a {
+      text-decoration: none;
+      color: var(--text-light);
+      padding: 8px 12px;
+      font-size: 1rem;
+      position: relative;
+      transition: color 0.3s;
     }
 
-    .menu li a::after {
-      content: "";
+    .menu a::after {
+      content: '';
       position: absolute;
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
-      width: 0%;
+      width: 0;
       height: 2px;
-      background-color: var(--underline-color);
-      transition: width 0.3s ease, transform 0.3s ease;
+      background-color: var(--underline);
+      transition: width 0.3s;
     }
 
-    .menu li a:hover::after {
+    .menu a:hover::after {
       width: 100%;
-      transform: translateX(-50%) scaleX(1);
+    }
+
+    .menu a:hover {
+      color: var(--primary-color);
     }
 
     .menu li ul {
@@ -91,97 +92,103 @@
       position: absolute;
       top: 35px;
       left: 0;
-      background: var(--nav-bg);
-      padding: 8px 0;
+      background-color: var(--nav-bg-light);
+      padding: 10px 0;
       list-style: none;
-      min-width: 160px;
-      opacity: 0;
-      transition: opacity 0.2s ease, transform 0.3s ease;
-      transform: translateY(-10px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .menu li:hover ul {
       display: block;
-      opacity: 1;
-      transform: translateY(0);
     }
 
-    #menu-check {
-      display: none;
+    .menu li ul li {
+      padding: 0;
+    }
+
+    .menu li ul li a {
+      display: block;
+      padding: 8px 16px;
+      white-space: nowrap;
     }
 
     .burger {
       display: none;
-      font-size: 28px;
+      font-size: 24px;
       cursor: pointer;
-      margin-right: 10px;
-    }
-
-    .right-icons {
-      display: flex;
-      align-items: center;
-      gap: 15px;
+      background: none;
+      border: none;
+      color: var(--text-light);
     }
 
     .dark-icon {
-      font-size: 24px;
+      font-size: 22px;
+      margin-left: 12px;
       cursor: pointer;
+      color: #fcbf49;
     }
 
+    /* Hidden inputs */
+    #menu-check, #dark-switch {
+      display: none;
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
       .menu {
-        display: none;
         flex-direction: column;
-        background-color: var(--nav-bg);
-        width: 100%;
         position: absolute;
         top: 60px;
         left: 0;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        z-index: 99;
+        width: 100%;
+        background-color: var(--nav-bg-light);
+        display: none;
       }
 
-      #menu-check:checked ~ nav .menu {
+      #menu-check:checked + label + .menu {
         display: flex;
       }
 
       .burger {
         display: block;
-        color: var(--text-color);
       }
     }
 
-    #dark-switch {
-      display: none;
-    }
-
+    /* Dark Mode */
     #dark-switch:checked ~ nav {
-      background-color: #121212;
-      color: #f0f0f0;
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
     }
 
-    #dark-switch:checked ~ nav .menu li a {
-      color: #f0f0f0;
+    #dark-switch:checked ~ nav .menu a,
+    #dark-switch:checked ~ nav .burger,
+    #dark-switch:checked ~ nav .dark-icon {
+      color: var(--text-dark);
+    }
+
+    #dark-switch:checked ~ nav .menu li ul {
+      background-color: #1e1e1e;
+    }
+
+    #dark-switch:checked ~ body {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
     }
   </style>
 </head>
 <body>
 
-  <!-- Dark Mode Switch -->
-  <input type="checkbox" id="dark-switch">
-  <!-- Mobile Menu Toggle -->
-  <input type="checkbox" id="menu-check">
+  <!-- Dark mode switch -->
+  <input type="checkbox" id="dark-switch" />
+
+  <!-- Mobile menu toggle -->
+  <input type="checkbox" id="menu-check" />
 
   <nav>
     <div class="logo">heyy!!</div>
 
-    <div class="right-icons">
-      <!-- Burger for Mobile -->
-      <label for="menu-check" class="burger">&#9776;</label>
-
-      <!-- Dark mode icon -->
-      <label for="dark-switch" class="dark-icon">🌙</label>
-    </div>
+    <!-- Burger menu for mobile -->
+    <label for="menu-check" class="burger">&#9776;</label>
 
     <ul class="menu">
       <li><a href="home.html">Home</a></li>
@@ -195,6 +202,9 @@
       </li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+
+    <!-- Dark mode icon -->
+    <label for="dark-switch" class="dark-icon">🌙</label>
   </nav>
 
 </body>
