--- a/index.html
+++ b/index.html
@@ -3,197 +3,241 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive Navbar</title>
+  <title>Contact Us</title>
   <style>
     :root {
-      --bg-light: #ffffff;
-      --bg-dark: #121212;
-      --text-light: #111;
-      --text-dark: #f0f0f0;
-      --nav-bg-light: #f5f5f5;
-      --primary-color: #ff7e5f;
-      --underline: #007acc;
+      --main-bg: #f5f5f5;
+      --box-bg: #ffffffec;
+      --accent: #b57edc;
+      --accent-dark: #9d65c9;
+      --text-dark: #333;
     }
 
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--bg-light);
-      color: var(--text-light);
-      background-image: url('bg.jpg');
-      background-attachment: fixed;
-      background-position: center;
-      background-size: cover;
-    }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-      background-color: var(--nav-bg-light);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .logo {
-      font-size: 1.4rem;
-      font-weight: bold;
-      color: var(--primary-color);
-    }
-
-    .right-section {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ead6f5, var(--main-bg));
       display: flex;
       align-items: center;
-      gap: 15px;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 20px;
+      transition: background 0.5s ease;
+background-image: url('cf.jpg');
+background-size: cover;
+
     }
 
-    .burger {
-      display: none;
-      font-size: 24px;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: var(--text-light);
-    }
-
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
-    .menu li {
-      position: relative;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: var(--text-light);
-      padding: 8px 12px;
-      font-size: 1rem;
-      position: relative;
-    }
-
-    .menu a::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 0;
-      height: 2px;
-      background-color: var(--underline);
-      transition: width 0.3s;
-    }
-
-    .menu a:hover::after {
+    .contact-box {
+      background: var(--box-bg);
+      border-radius: 16px;
+      padding: 30px;
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
       width: 100%;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeIn 1s ease forwards;
     }
 
-    .menu a:hover {
-      color: var(--primary-color);
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
-    .menu li ul {
-      display: none;
-      position: absolute;
-      top: 35px;
-      left: 0;
-      background-color: var(--nav-bg-light);
-      padding: 10px 0;
-      list-style: none;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+      color: var(--accent-dark);
     }
 
-    .menu li:hover ul {
+    .form-group {
+      margin-bottom: 18px;
+      position: relative;
+    }
+
+    .form-group label {
       display: block;
+      margin-bottom: 6px;
+      color: var(--text-dark);
+      font-weight: 500;
     }
 
-    .dark-icon {
-      font-size: 22px;
-      cursor: pointer;
-      color: #fcbf49;
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 12px 16px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 15px;
+      background-color: #f9f9f9;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.08);
+      transition: border 0.3s, box-shadow 0.3s, background-color 0.3s;
     }
 
-    #menu-check,
-    #dark-switch {
+    .form-group input:focus,
+    .form-group textarea:focus {
+      border-color: var(--accent);
+      background-color: #fff;
+      box-shadow: 0 0 6px rgba(181, 126, 220, 0.6);
+      outline: none;
+    }
+
+    .form-group textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+
+    .char-count {
+      font-size: 0.8em;
+      text-align: right;
+      color: #666;
+      margin-top: 4px;
+    }
+
+    .error-msg {
+      font-size: 0.85em;
+      color: red;
+      margin-top: 4px;
       display: none;
     }
 
-    @media (max-width: 768px) {
-      .menu {
-        display: none;
-        flex-direction: column;
-        background-color: var(--nav-bg-light);
-        width: 100%;
-        position: absolute;
-        top: 60px;
-        right: 0;
-      }
+    .submit-btn {
+      width: 100%;
+      background: var(--accent);
+      color: white;
+      border: none;
+      padding: 14px;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
 
-      #menu-check:checked ~ nav .menu {
-        display: flex;
-      }
+    .submit-btn:hover {
+      background: var(--accent-dark);
+    }
 
-      .burger {
-        display: block;
+    .success-toast {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: var(--accent);
+      color: white;
+      padding: 12px 20px;
+      border-radius: 10px;
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+      opacity: 0;
+      animation: fadeInToast 0.5s forwards;
+    }
+
+    @keyframes fadeInToast {
+      to {
+        opacity: 1;
       }
     }
 
-    /* Dark Mode */
-    #dark-switch:checked ~ nav {
-      background-color: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    #dark-switch:checked ~ nav .menu,
-    #dark-switch:checked ~ nav .menu li ul {
-      background-color: #1e1e1e;
-    }
-
-    #dark-switch:checked ~ nav .menu a,
-    #dark-switch:checked ~ nav .burger,
-    #dark-switch:checked ~ nav .dark-icon {
-      color: var(--text-dark);
+    @media (max-width: 600px) {
+      .contact-box {
+        padding: 20px;
+      }
+      .success-toast {
+        right: 10px;
+        left: 10px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Dark Mode Toggle -->
-  <input type="checkbox" id="dark-switch" />
-  <!-- Mobile Menu Toggle -->
-  <input type="checkbox" id="menu-check" />
+  <div class="contact-box">
+    <h2>Contact Us</h2>
+    <form id="contactForm" novalidate>
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" placeholder="John Doe">
+        <div class="error-msg" id="nameError">Please enter your name.</div>
+      </div>
 
-  <nav>
-    <div class="logo">heyy!!</div>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" placeholder="example@mail.com">
+        <div class="error-msg" id="emailError">Please enter a valid email.</div>
+      </div>
 
-    <div class="right-section">
-      <!-- Dark mode icon -->
-      <label for="dark-switch" class="dark-icon">🌙</label>
-      <!-- Hamburger for mobile -->
-      <label for="menu-check" class="burger">&#9776;</label>
-    </div>
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" placeholder="Type your message..."></textarea>
+        <div class="char-count" id="charCount">0/500</div>
+        <div class="error-msg" id="messageError">Please enter a message.</div>
+      </div>
 
-    <!-- Menu -->
-    <ul class="menu">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li>
-        <a href="#">More</a>
-        <ul>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
-      </li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      <button type="submit" class="submit-btn">Send Message</button>
+    </form>
+  </div>
+
+  <div id="toast" class="success-toast" style="display:none;">Message sent successfully!</div>
+
+  <script>
+    const nameInput = document.getElementById("name");
+    const emailInput = document.getElementById("email");
+    const messageInput = document.getElementById("message");
+    const charCount = document.getElementById("charCount");
+    const toast = document.getElementById("toast");
+
+    messageInput.addEventListener("input", () => {
+      charCount.textContent = `${messageInput.value.length}/500`;
+      if (messageInput.value.length > 500) {
+        messageInput.style.borderColor = "red";
+      } else {
+        messageInput.style.borderColor = "";
+      }
+    });
+
+    const showError = (id, condition) => {
+      const error = document.getElementById(id);
+      error.style.display = condition ? "block" : "none";
+    };
+
+    nameInput.addEventListener("input", () => {
+      showError("nameError", !nameInput.value.trim());
+    });
+
+    emailInput.addEventListener("input", () => {
+      showError("emailError", !emailInput.value.trim());
+    });
+
+    messageInput.addEventListener("input", () => {
+      showError("messageError", !messageInput.value.trim());
+    });
+
+    document.getElementById("contactForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const name = nameInput.value.trim();
+      const email = emailInput.value.trim();
+      const message = messageInput.value.trim();
+
+      const valid = name && email && message && message.length <= 500;
+
+      showError("nameError", !name);
+      showError("emailError", !email);
+      showError("messageError", !message);
+
+      if (valid) {
+        toast.style.display = "block";
+        setTimeout(() => {
+          toast.style.display = "none";
+        }, 3000);
+
+        document.getElementById("contactForm").reset();
+        charCount.textContent = "0/500";
+      }
+    });
+  </script>
 
 </body>
 </html>
