--- a/index.html
+++ b/index.html
@@ -3,136 +3,246 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Form</title>
+  <title>Contact Us</title>
   <style>
     * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      box-sizing: border-box; /* ✅ Added to fix textarea overflow on mobile */
+    }
+
+    :root {
+      --main-bg: #f5f5f5;
+      --box-bg: #ffffffec;
+      --accent: #b57edc;
+      --accent-dark: #9d65c9;
+      --text-dark: #333;
     }
 
     body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://images.unsplash.com/photo-1517832207067-4db24a2ae47c') no-repeat center center/cover;
-      min-height: 100vh;
+      background: linear-gradient(135deg, #ead6f5, var(--main-bg));
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 20px;
+      transition: background 0.5s ease;
+ background-image: url('cf.jpg');
+background-size: cover;
+
     }
 
     .contact-box {
-      background-color: white;
-      max-width: 400px;
-      width: 90%;
-      padding: 25px 20px;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+      background: var(--box-bg);
+      border-radius: 16px;
+      padding: 30px;
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 100%;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeIn 1s ease forwards;
     }
 
-    .contact-box h2 {
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    h2 {
       text-align: center;
-      color: #9b59b6;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      color: var(--accent-dark);
     }
 
     .form-group {
       margin-bottom: 18px;
-      width: 100%;
+      position: relative;
     }
 
-    label {
+    .form-group label {
       display: block;
       margin-bottom: 6px;
-      font-weight: 600;
+      color: var(--text-dark);
+      font-weight: 500;
     }
 
-    input[type="text"],
-    input[type="email"],
-    textarea {
+    .form-group input,
+    .form-group textarea {
       width: 100%;
-      padding: 12px;
-      border-radius: 10px;
+      padding: 12px 16px;
       border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 15px;
       background-color: #f9f9f9;
-      font-size: 16px;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.08);
+      transition: border 0.3s, box-shadow 0.3s, background-color 0.3s;
+    }
+
+    .form-group input:focus,
+    .form-group textarea:focus {
+      border-color: var(--accent);
+      background-color: #fff;
+      box-shadow: 0 0 6px rgba(181, 126, 220, 0.6);
       outline: none;
-      transition: border-color 0.3s ease;
     }
 
-    input[type="text"]:focus,
-    input[type="email"]:focus,
-    textarea:focus {
-      border-color: #9b59b6;
-    }
-
-    textarea {
+    .form-group textarea {
       resize: vertical;
       min-height: 100px;
-      max-width: 100%;
     }
 
-    .char-counter {
+    .char-count {
+      font-size: 0.8em;
       text-align: right;
-      font-size: 13px;
-      color: #555;
-      margin-top: 5px;
+      color: #666;
+      margin-top: 4px;
+    }
+
+    .error-msg {
+      font-size: 0.85em;
+      color: red;
+      margin-top: 4px;
+      display: none;
     }
 
     .submit-btn {
       width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      background-color: #9b59b6;
+      background: var(--accent);
       color: white;
+      border: none;
+      padding: 14px;
+      border-radius: 10px;
       font-size: 16px;
-      font-weight: bold;
+      font-weight: 500;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background 0.3s ease;
     }
 
     .submit-btn:hover {
-      background-color: #8e44ad;
+      background: var(--accent-dark);
     }
 
-    @media (max-width: 480px) {
+    .success-toast {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: var(--accent);
+      color: white;
+      padding: 12px 20px;
+      border-radius: 10px;
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+      opacity: 0;
+      animation: fadeInToast 0.5s forwards;
+    }
+
+    @keyframes fadeInToast {
+      to {
+        opacity: 1;
+      }
+    }
+
+    @media (max-width: 600px) {
       .contact-box {
-        padding: 20px 15px;
+        padding: 20px;
       }
 
-      .submit-btn {
-        font-size: 15px;
+      .success-toast {
+        right: 10px;
+        left: 10px;
       }
     }
   </style>
 </head>
 <body>
+
   <div class="contact-box">
     <h2>Contact Us</h2>
-    <form>
+    <form id="contactForm" novalidate>
       <div class="form-group">
         <label for="name">Full Name</label>
-        <input type="text" id="name" placeholder="John Doe" />
+        <input type="text" id="name" placeholder="John Doe">
+        <div class="error-msg" id="nameError">Please enter your name.</div>
       </div>
+
       <div class="form-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="example@mail.com" />
+        <input type="email" id="email" placeholder="example@mail.com">
+        <div class="error-msg" id="emailError">Please enter a valid email.</div>
       </div>
+
       <div class="form-group">
         <label for="message">Your Message</label>
-        <textarea id="message" placeholder="Type your message..." maxlength="500" oninput="updateCharCount()"></textarea>
-        <div class="char-counter" id="charCounter">0/500</div>
+        <textarea id="message" placeholder="Type your message..."></textarea>
+        <div class="char-count" id="charCount">0/500</div>
+        <div class="error-msg" id="messageError">Please enter a message.</div>
       </div>
+
       <button type="submit" class="submit-btn">Send Message</button>
     </form>
   </div>
 
+  <div id="toast" class="success-toast" style="display:none;">Message sent successfully!</div>
+
   <script>
-    function updateCharCount() {
-      const message = document.getElementById("message");
-      const counter = document.getElementById("charCounter");
-      counter.innerText = `${message.value.length}/500`;
-    }
+    const nameInput = document.getElementById("name");
+    const emailInput = document.getElementById("email");
+    const messageInput = document.getElementById("message");
+    const charCount = document.getElementById("charCount");
+    const toast = document.getElementById("toast");
+
+    messageInput.addEventListener("input", () => {
+      charCount.textContent = `${messageInput.value.length}/500`;
+      if (messageInput.value.length > 500) {
+        messageInput.style.borderColor = "red";
+      } else {
+        messageInput.style.borderColor = "";
+      }
+    });
+
+    const showError = (id, condition) => {
+      const error = document.getElementById(id);
+      error.style.display = condition ? "block" : "none";
+    };
+
+    nameInput.addEventListener("input", () => {
+      showError("nameError", !nameInput.value.trim());
+    });
+
+    emailInput.addEventListener("input", () => {
+      showError("emailError", !emailInput.value.trim());
+    });
+
+    messageInput.addEventListener("input", () => {
+      showError("messageError", !messageInput.value.trim());
+    });
+
+    document.getElementById("contactForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const name = nameInput.value.trim();
+      const email = emailInput.value.trim();
+      const message = messageInput.value.trim();
+
+      const valid = name && email && message && message.length <= 500;
+
+      showError("nameError", !name);
+      showError("emailError", !email);
+      showError("messageError", !message);
+
+      if (valid) {
+        toast.style.display = "block";
+        setTimeout(() => {
+          toast.style.display = "none";
+        }, 3000);
+
+        document.getElementById("contactForm").reset();
+        charCount.textContent = "0/500";
+      }
+    });
   </script>
+
 </body>
 </html>
